# AnswerMe

./: CMakeLists.txt  README.md  org.kde.answerme.desktop  org.kde.answerme.json  org.kde.answerme.metainfo.xml
android/: AndroidManifest.xml
src/: CMakeLists.txt  answermeconfig.kcfgc  app.cpp  app.h  main.cpp
src/contents/ui/: About.qml  main.qml
